--- a/greenHub/backend/static/css/styles.css
+++ b/greenHub/backend/static/css/styles.css
@@ -2,6 +2,7 @@ body{
     background:azure;
 }
 /* Header Styles */
+/* Navbar */
 .navbar {
     position: fixed;
     width: 100%;
@@ -89,12 +90,75 @@ body{
   .nav-empty-space {
     opacity: 0;
   }
+  /* End Navbar */
+
+  /* Backdrop */
+  .backdrop{
+    background-color: #3b9709;
+    /* height:0.44vh; */
+  }
+  .backdrop-img img{
+    width:100vw;
+  }
+
+  /* Main */
+  .head{
+    font-size: 5rem;
+  }
+  .cool-hr{
+    width:50vw;
+  }
+  .about{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 5rem;
+  }
+  .descript{
+    display:grid;
+    grid-template-columns: 1fr;
+  }
+  .team-plates{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    justify-items: center;
+    align-items: center;
+    /* background-color: red; */
+  }
+  .card{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    /* max-width: 500px; */
+    background-color: azure;
+    border: none;
+    margin: 2rem;
+
+  }
+  .person img{
+    /* width:150px; */
+    border-radius: 50rem;
+    margin: auto
+  }
+  .name{
+    font-size: 3rem;
+    margin:0.5rem;
+    text-align: center;
+  }
+  .desc{
+    max-width:330px;
+  }
+
+
+
 /* footer styles */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;500&display=swap');
 .footer{
   margin-top: 0rem;
   padding: 0.05rem;
-  position: absolute;
+  /* position: absolute; */
   background-color: #348508;
   bottom: 0;
   left: 0;
@@ -103,7 +167,7 @@ body{
   }
 .footerGrid{
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(4,1fr);
   padding: 1rem;
   padding-left: 2rem;
   padding-right: 2rem;
