--- a/greenHub/backend/templates/index.html
+++ b/greenHub/backend/templates/index.html
@@ -9,38 +9,38 @@
   {% comment %} Stylesheets Here {% endcomment %}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.4/swiper-bundle.min.js"
-    crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  {% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.4/swiper-bundle.min.js" {% endcomment %}
+    {% comment %} crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> {% endcomment %}
+  {% comment %} <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> {% endcomment %}
+  {% comment %} <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> {% endcomment %}
   <!-- Font Awesome -->
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+  {% comment %} <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"> {% endcomment %}
 
 
   <!-- Fonts -->
 
   <!-- Open Sans for body font -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800" rel="stylesheet">
+  {% comment %} <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800" rel="stylesheet"> {% endcomment %}
   <!-- Montserrat for title -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  {% comment %} <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> {% endcomment %}
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <!-- Slick slider -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+  {% comment %} <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
     integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer" /> {% endcomment %}
   <!-- Theme color -->
   {% comment %} Aos Animation stylesheet {% endcomment %}
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  {% comment %} <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> {% endcomment %}
 
   <!-- Main Style -->
   <link href="{%static 'css/styles.css' %}" rel="stylesheet">  
   
     
-  <script src="https://kit.fontawesome.com/13fe3ce91d.js" crossorigin="anonymous"></script>
+  {% comment %} <script src="https://kit.fontawesome.com/13fe3ce91d.js" crossorigin="anonymous"></script> {% endcomment %}
     
 
 
@@ -62,31 +62,8 @@
 <body>
     {% comment %} Header {% endcomment %}
     <section id="header">
-    {% comment %} <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Lmao</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="#">News | Articles</a>
-              </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Forums</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#">Fundraisers</a>
-                  </li>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav> {% endcomment %}
+
+      {% comment %} Navbar {% endcomment %}
       <nav class="navbar navbar-expand-lg mr-auto">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -96,30 +73,18 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <div class="navbar-brand">
-                <a class="nav-brand">GreenHub</a>
+                <a class="nav-brand" href="#">GreenHub</a>
               </div>
               <div class="nav-link-flex">
-                <a class="nav-link" href="#about">News|Articles</a>
-                <span class="ball-animation"></span>
-              </div>
-              <div class="nav-link-flex">
-                <a class="nav-link" href="#tracks">Forums</a>
+                <a class="nav-link" href="#">News|Articles</a>
                 <span class="ball-animation"></span>
               </div>
               <div class="nav-link-flex">
-                <a class="nav-link" href="#mu-sponsors">Fundraisers</a>
+                <a class="nav-link" href="#">Forums</a>
                 <span class="ball-animation"></span>
               </div>
-              {% comment %} <div class="nav-link-flex">
-                <a class="nav-link" href="#rules">Rulebook</a>
-                <span class="ball-animation"></span>
-              </div> {% endcomment %}
-              {% comment %} <div class="nav-link-flex">
-                <a class="nav-link" href="#mu-prizes">Prizes</a>
-                <span class="ball-animation"></span>
-              </div> {% endcomment %}
               <div class="nav-link-flex">
-                <a class="nav-link" href="#Timeline">Timeline</a>
+                <a class="nav-link" href="#">Fundraisers</a>
                 <span class="ball-animation"></span>
               </div>
               <a class="nav-empty-space" href="#">Empty</a>
@@ -127,7 +92,129 @@
           </div>
         </div>
       </nav>
+      {% comment %} Navbar {% endcomment %}
+
+      {% comment %} Backdrop {% endcomment %}
+
+      <div class="backdrop">
+        <div class="backdrop-img">
+        <img src="{%static 'img/sapling.png' %}">
+        </div>
+
+      </div>
+
+      {% comment %} End Backdrop {% endcomment %}
+
+      {% comment %} Main  {% endcomment %}
+      <div class="info">
+        {% comment %} <div class="announcements">
+          <h1 class="head">Announcments</h1>
+          <div class="event">
+            <div class="event-date">
+              <p>16-09-2022</p>
+            </div>
+            <div class="event-desc">
+              <p>Loda Lelooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</p>
+            </div>
+          </div>
+          <div class="event">
+            <div class="event-date">
+              <p>16-09-2022</p>
+            </div>
+            <div class="event-desc">
+              <p>Loda Lelooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</p>
+            </div>
+          </div>
+          <div class="event">
+            <div class="event-date">
+              <p>16-09-2022</p>
+            </div>
+            <div class="event-desc">
+              <p>Loda Lelooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</p>
+            </div>
+          </div>
+          <div class="subAnnounce">
+          </div>
+        </div> {% endcomment %}
+        <div class="about">
+          <h1 class="head">About Us</h1>    <hr class="cool-hr"></hr>
+          <div class="descript">
+            loretuyguhgfdtuyuiutdyrxfcgvhbigyftdyrcgvgf6dtychgkjvhyfutcyftcfhgjlbknlxdgfghbyg7
+          </div>
+        </div>
+
+        <div class="our-team">
+          <center><h1 class="head">Our Team</h1>
+          <hr class="cool-hr"></hr></center>
+          <div class="team-plates">
+            <div class="card">
+            </div>
+            <div class="card">
+              <div class="person">
+                <center><img src="{%static 'img/lamo.png' %}"></center>
+              </div>
+              <div class="pname">
+                <center><b><p class="name">Akshavya</p></b></center>
+              </div>
+              <div class="desc">
+                <p>Puff Puff Pass Hogaya Bhai Paas loretuyguhgfdtuyuiutdyrxfcgvhbigyftdyrcgvgf6dtychgkjvhyfutcyf</p>
+              </div>
+              </div>
+              <div class="card">
+                <div class="person">
+                  <center><img src="{%static 'img/lamo.png' %}"></center>
+                </div>
+                <div class="pname">
+                  <center><b><p class="name">Aryan</p></b></center>
+                </div>
+                <div class="desc">
+                  <p>Puff Puff Pass Hogaya Bhai Paasdtgvhbjhigifutdkyrxfhcgvkbjguiflydtkyrxfhgchvkbjgufyutkdxfhmg,jbjugiyfucg</p>
+                </div>
+                </div>
+
+                <div class="card">
+                  <div class="person">
+                    <center><img src="{%static 'img/lamo.png' %}"></center>
+                  </div>
+                  <div class="pname">
+                    <center><b><p class="name">Avirat</p></b></center>
+                  </div>
+                  <div class="desc">
+                    <p>Puff Puff Pass Hogaya Bhai Paas loretuyguhgfdtuyuiutdyrxfcgvhbigyftdyrcgvgf6dtychgkjvhyfutcyf</p>
+                  </div>
+                </div>
+                <div class="card">
+                </div>
+            </div>
+            <div>
+        </div>
+
+        {% comment %} What we do {% endcomment %}
+        {% comment %} <div class="cont">
+          <div class="team-info">
+            <div class="left">
+              <h1 class="head">What We Do</h1>
+              <p>Oyes</p>
+            </div>
+            <div class="right">
+            <div>
+          </div>
+        </div> {% endcomment %}
+        {% comment %} How we do it ? {% endcomment %}
+        {% comment %} <div class="team-info">
+          <div class="left">
+          </div>
+          <div class="right">
+            <h2 class="head">How Do We Do It</h2>
+            <p>Oyes</p>
+          <div>
+        </div>
+      </div> {% endcomment %}
+      {% comment %} End Main {% endcomment %}
+
       {% comment %} End Header {% endcomment %}
+
+      {% comment %} Footer {% endcomment %}
     </section>
     <section id="footer">
       <div class="footer">
@@ -154,6 +241,12 @@
             <div class="fLink">
               <a  href=""> UNEP</a>
             </div>
+          </div>
+          
+          <div class="fGridElement">
+            <h4 class="fHeading">UNEP</h4>
+            <hr class="fHrStyle"></hr>
+            <p class="fPara">UNEP's mission is to provide leadership and encourage partnership by drilling down on the root causes of the three planetary crisesof climate change,nature and biodiversity loss and pollution and waste.</p>
           </div>
     
           <div class="fGridElement">
@@ -184,7 +277,7 @@
     
         </div>
         <center><div class="finisher">
-            Made With HTML,CSS Django 
+            Made With HTML,CSS & Django 
           </div></center>
       </div>
     </section>
