integrated pages completely(Aryan's pages)

--- a/greenHub/backend/templates/index.html
+++ b/greenHub/backend/templates/index.html
@@ -76,7 +76,7 @@
                 <a class="nav-brand" href="#">GreenHub</a>
               </div>
               <div class="nav-link-flex">
-                <a class="nav-link" href="#">News|Articles</a>
+                <a class="nav-link" href="/newsArticles">News|Articles</a>
                 <span class="ball-animation"></span>
               </div>
               <div class="nav-link-flex">
@@ -84,7 +84,7 @@
                 <span class="ball-animation"></span>
               </div>
               <div class="nav-link-flex">
-                <a class="nav-link" href="#">Fundraisers</a>
+                <a class="nav-link" href="/fundraiser">Fundraisers</a>
                 <span class="ball-animation"></span>
               </div>
               <a class="nav-empty-space" href="#">Empty</a>
