--- a/greenHub/backend/templates/news-Articles.html
+++ b/greenHub/backend/templates/news-Articles.html
@@ -1,10 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="NAStyles.css" rel="stylesheet" > 
+    <link href="{%static 'css/NAstyles.css' %}" rel="stylesheet"> 
+    <link href="{%static 'css/styles.css' %}" rel="stylesheet">  
     <title>Document</title>
 </head>
 <body style="background-color:#1d2a35">
